--- a/style.css
+++ b/style.css
@@ -43,93 +43,88 @@
 
 
 * {
+	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	text-decoration: none;
-	box-sizing: border-box;
 	border: none;
 }
 
 html{
     font-size: 62.5%;
+	
 }
 
 body {
     font-size: 1.6rem;
-	font-family: Arial, Helvetica, sans-serif;	
     background-color: var(--background);
+	font-family: 'Dosis', sans-serif;
 }
 
-.container{
+.container-custom{
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
     align-items: center;
-	height: 100vh;
-	flex-wrap: wrap;
-	margin:3rem;
+	margin: 0 1rem;
 }
 
-.card {
+.card-custom {
 	background-color:var(--white-text);
 	border-radius: 1.6rem;
 	box-shadow: 0 1.6rem 1.6rem rgba(0, 0, 0, 0.2);
-	display: flex;	
-	margin: 2.4rem;
+	display: flex;
+	margin: 1.8rem 1.5rem;
 	overflow: hidden;
-	width: 41.5rem;
-	height: 23rem;
+	width: 100%;
+	max-height: 26rem;
 }
 
-.card h6 {
+.card-custom h2 {
+	letter-spacing: .16rem;
+	margin: 0.5rem 0;
+	color: var(black-text);
+	font-size: 2.6rem;
+	font-weight: bold;
+}
+
+.card-custom h6 {
 	opacity: 0.6;	
 	letter-spacing: .16rem;
 	margin: 0.5rem 0;
 	text-transform: uppercase;
-}
-
-.card  h2 {
-	letter-spacing: .16rem;
-	margin: 0.5rem 0;
-	color: var(black-text);
+	font-size: 1.5rem;
 }
 
 .left-column {	
 	color: var(--white-text);
-	max-width: 16rem;
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+	width: 12.5rem;
 }
 
-.left-column h2{
-	color: var(--white-text);
-}
-
-.left-column .image-container {
+.left-column .image-container-custom {
 	width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
-.left-column .image-container img {
+.left-column .image-container-custom img {
     height: 100%;
 }
 
 .right-column {
-	padding: 2rem 2.5rem;
+	padding: 2rem 2rem;
+	padding-top: 1.2rem;
 	width: 100%;
 	display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: space-between;
-	
 }
 
 .right-column p{	
-	font-size: 1.3rem;
+	font-size: 1.55rem;
 	color: var(--black-text);
-	text-align: justify;
+	margin-bottom: .9rem;
 }
 
 .button {
@@ -137,19 +132,7 @@ body {
 	box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
 	color: var(--white-text);
 	font-size: 1.5rem;
-	padding: 0.9rem 2rem;
+	padding: 0.6rem 2rem;
 	letter-spacing: .16rem;
 	align-self: flex-end;
-    margin-top: 1rem;
-}
-
-/*media queries*/
-
-@media (max-width: 1030px) {
-	.container{
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		height:auto;
-	}
 }
